# customer-churn-mlops

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
notebooks/: 01_eda.ipynb  02_Data_preprocessing.ipynb  03_model_experiments.ipynb
src/: data_preprocess.py  train.py
