[project]
name = "customer-churn-mlops"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "imblearn>=0.0",
    "joblib>=1.5.3",
    "matplotlib>=3.10.9",
    "notebook>=7.5.5",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "xgboost>=3.2.0",
]
